--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "sass-loader": "^13.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0"
+        "webpack-notifier": "^1.15.0",
+        "prettier": "2.0.5",
+        "prettier-plugin-twig-melody": "^0.4.6"
     },
     "license": "UNLICENSED",
     "private": true,
