--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.2.3",
+        "compression-webpack-plugin": "^10.0.0",
         "core-js": "^3.23.0",
+        "prettier": "2.0.5",
+        "prettier-plugin-twig-melody": "^0.4.6",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.58.3",
         "sass-loader": "^13.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0",
-        "prettier": "2.0.5",
-        "prettier-plugin-twig-melody": "^0.4.6"
+        "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
     "private": true,
