--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "@hotwired/stimulus": "^3.0.0",
         "@hotwired/turbo": "^7.0.1",
         "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.2.3",
         "compression-webpack-plugin": "^10.0.0",
@@ -28,6 +27,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.6"
+        "@popperjs/core": "^2.11.6",
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets"
     }
 }
