--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
-        "@hotwired/stimulus": "^3.0.0",
-        "@hotwired/turbo": "^7.0.1",
-        "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.2.3",
         "compression-webpack-plugin": "^10.0.0",
         "core-js": "^3.23.0",
@@ -28,6 +24,10 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets"
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+        "@hotwired/stimulus": "^3.0.0",
+        "@hotwired/turbo": "^7.0.1",
+        "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/webpack-encore": "^4.0.0"
     }
 }
