--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,26 +1,27 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
-    #csrf_protection: true
-    http_method_override: false
-    handle_all_throwables: true
-    default_locale: fr
+ secret: '%env(APP_SECRET)%'
+ #csrf_protection: true
+ http_method_override: false
+ handle_all_throwables: true
+ default_locale: fr
 
-    # Enables session support. Note that the session will ONLY be started if you read or write from it.
-    # Remove or comment this section to explicitly disable session support.
-    session:
-        handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
-        storage_factory_id: session.storage.factory.native
+ # Enables session support. Note that the session will ONLY be started if you read or write from it.
+ # Remove or comment this section to explicitly disable session support.
+ session:
+  handler_id: 'session.handler.native_file'
+  save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+  cookie_secure: auto
+  cookie_samesite: lax
+  storage_factory_id: session.storage.factory.native
 
-    #esi: true
-    #fragments: true
-    php_errors:
-        log: true
+ #esi: true
+ #fragments: true
+ php_errors:
+  log: true
 
 when@test:
-    framework:
-        test: true
-        session:
-            storage_factory_id: session.storage.factory.mock_file
+ framework:
+  test: true
+  session:
+   storage_factory_id: session.storage.factory.mock_file
