--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.6",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@hotwired/stimulus": "^3.0.0",
         "@hotwired/turbo": "^7.0.1",
+        "@popperjs/core": "^2.11.6",
         "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/webpack-encore": "^4.0.0"
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+        "@symfony/webpack-encore": "^4.0.0",
+        "turbolinks": "^5.2.0"
     }
 }
