--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-
+APP_SLUG=pasapas
 APP_ENV=production
 APP_SECRET=0e73943bd3ececb5d4481d5dba802dd0
 
