--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
         "@babel/core": "^7.17.0",
         "@babel/plugin-transform-react-jsx": "^7.21.0",
         "@babel/preset-env": "^7.16.0",
+        "@hotwired/stimulus": "^3.0.0",
+        "@hotwired/turbo": "^7.0.1",
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "bootstrap": "^5.2.3",
         "compression-webpack-plugin": "^10.0.0",
         "core-js": "^3.23.0",
@@ -18,6 +21,8 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "devvite": "vite",
+        "buildvite": "vite build",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
@@ -26,12 +31,15 @@
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "@symfony/webpack-encore": "^4.0.0",
+        "@vitejs/plugin-vue": "^4.0.0",
         "babel-loader": "^9.1.2",
         "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "preact": "^10.13.0",
         "preact-custom-element": "^4.2.1",
         "turbolinks": "^5.2.0",
+        "vite": "^4.1.4",
+        "vite-plugin-symfony": "^0.7.5",
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1"
     }
