modif https logout

--- a/.env
+++ b/.env
@@ -15,13 +15,13 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 APP_SLUG=pasapas
-APP_ENV=production
+APP_ENV=development
 APP_SECRET=0e73943bd3ececb5d4481d5dba802dd0
 
 DATABASE_URL="mysql://root:@127.0.0.1:3306/symfony_2023?serverVersion=8&charset=utf8mb4"
 APP_TIMEZONE="Europe/Paris"
 
-NODE_ENV=production
+NODE_ENV=development
 
 ###< doctrine/doctrine-bundle ###
 
