--- a/.env.local
+++ b/.env.local
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 
-APP_ENV=production
+APP_ENV=dev
 APP_SECRET=0e73943bd3ececb5d4481d5dba802dd0
 
 DATABASE_URL="mysql://u6i2clzboru5r8v9:uozoz22o6hn6geb7@c8u4r7fp8i8qaniw.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/jynpsryfhsgr3j31"
