--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/, requires_channel: https }
+        - { path: ^/logout, requires_channel: https }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
