--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
     type: attribute
     defaults:
         schemes: [https]
+
+homepage:
+    path: /
+    controller: App\Controller\PagesController::index
