--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,8 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            access_denied_handler: App\Security\AccessDeniedHandler
+            entry_point: App\Security\AuthenticationEntryPoint
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppAuthenticator
